# otus

./: .gitignore  LICENSE  README.md
api_events/: README.md  newman_output.txt  postman_collection.json  pyproject.toml
api_gateway/: README.md  docker-compose.yaml  postman_collection.json  pyproject.toml  requirements.txt
gomemcload/: README.md
httpserver/: README.md  __main__.py  (+2 more)
kubernetes_rest_service/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  grafana-dashboard.json  k8s-rest-service.postman_collection.json  pyproject.toml  requirements.txt  run.sh
kubernetes_rest_service/app/api/: models.py  serializers.py  urls.py  views.py
kubernetes_rest_service/app/api/migrations/: 0001_initial.py
kubernetes_rest_service/app/config/: settings.py  urls.py
kubernetes_rest_service/chart/: Chart.yaml  values.yaml
kubernetes_rest_service/chart/templates/: configmap.yaml  deployment.yaml  secret.yaml  service_monitor.yaml
microservices_final_project/: README.md  docker-compose.yaml  newman_output.txt  postman_collection.json  pyproject.toml  requirements.txt
microservices_final_project/auth_service/: app.py
microservices_final_project/billing_service/: Dockerfile  app.py  handlers.py  schema.py
microservices_final_project/chart/: values.yaml
microservices_final_project/chart/templates/: deployment.yaml  ingress.yaml  service.yaml
microservices_final_project/notification_service/: Dockerfile  app.py  handlers.py  schema.py
microservices_final_project/scooter_management_service/: Dockerfile  app.py  handlers.py  schema.py
(+84 files in other folders)
