[tool.poetry]
name = "microservices_final_projetc"
version = "0.1.0"
description = ""
authors = ["stkrizh <st.krizh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.7.4"
asyncpg = "^0.24.0"
marshmallow = "^3.13.0"
aio-pika = "^6.8.0"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
mypy = "^0.910"
flake8 = "^3.9.2"
ipython = "^7.31.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
